<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#160734">


    <ImageView
        android:id="@+id/arrowBackFromAdd"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:src="@drawable/baseline_arrow_back_24" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border">


        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/transaction_type"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButtonBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:text="@string/buy"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <RadioButton
                android:id="@+id/radioButtonSell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:text="@string/sell"
                android:textColor="@color/white"
                android:textSize="25sp"/>
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border">


        <TextView
            android:id="@+id/instrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/transaction_instrument"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/enteredTickerTransaction"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/tickerHint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="#888888"
            android:textSize="30sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border">


        <TextView
            android:id="@+id/transactionPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/transactionPrice"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/enteredPriceTransaction"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/_12_34"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="#888888"
            android:textSize="30sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border">


        <TextView
            android:id="@+id/transactionVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/volume"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/enteredVolumeTransaction"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/_1"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="#888888"
            android:textSize="30sp" />


    </LinearLayout>

    <Button
        android:id="@+id/addTransactionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="#18A118"
        android:text="@string/addTicker" />


</LinearLayout>