<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShareStatisticsActivity"
    android:orientation="vertical"
    android:background="#160734">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/arrowBackFromPortfolioShareStats"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:src="@drawable/baseline_arrow_back_24" />


        <TextView
            android:id="@+id/statsTickerPortfolio"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:textAlignment="center"
            android:text=""
            android:textColor="#F8954E"
            android:textSize="40sp" />


    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>
            <TextView
                android:id="@+id/transPrice"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:gravity="center"
                android:background="@drawable/border"
                android:text="@string/trans_price"/>

            <TextView
                android:id="@+id/currentPrice"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:gravity="center"
                android:background="@drawable/border"
                android:text="@string/current_price"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/earnedDivs"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:gravity="center"
                android:background="@drawable/border"
                android:text="@string/earned_divs"/>

            <TextView
                android:id="@+id/totalReturn"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:gravity="center"
                android:background="@drawable/border"
                android:text="@string/total_return"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/cashFlow"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:gravity="center"
                android:background="@drawable/border"
                android:text="@string/cash_flow"/>

            <TextView
                android:id="@+id/transNumber"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:gravity="center"
                android:background="@drawable/border"
                android:text="@string/trans_number"/>
        </TableRow>


    </TableLayout>


</LinearLayout>