<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#160734">


    <ImageView
        android:id="@+id/arrowBackFromSearch"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/enter_ticker" />

    <EditText
        android:id="@+id/enteredTicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/tickerHint"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#888888"
        android:textSize="24sp" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="#18A118"
        android:text="@string/addTicker" />


</LinearLayout>