<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PortfolioStatistics"
    android:orientation="vertical"
    android:background="#160734">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/arrowBackFromPortfolioStats"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:src="@drawable/baseline_arrow_back_24" />


        <TextView
            android:id="@+id/stats"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textAlignment="center"
            android:text="@string/statistics"
            android:textColor="#F8954E"
            android:textSize="40sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border">


        <TextView
            android:id="@+id/portReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/port_return"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/portfolioReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border">


        <TextView
            android:id="@+id/indReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/indreturn"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/indexReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border">


        <TextView
            android:id="@+id/portStruct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/portStructure"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButtonCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="120dp"
                android:background="@drawable/border"
                android:text="@string/countries"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <RadioButton
                android:id="@+id/radioButtonSector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="120dp"
                android:background="@drawable/border"
                android:text="@string/sector"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <RadioButton
                android:id="@+id/radioButtonShares"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="120dp"
                android:background="@drawable/border"
                android:text="@string/shares"
                android:textColor="@color/white"
                android:textSize="25sp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/structureData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>



</LinearLayout>